--- a/Cosmic/.env
+++ b/Cosmic/.env
@@ -1,7 +1,7 @@
 DB_DRIVER=mysql
 DB_HOST=localhost
-DB_NAME=cosmic
+DB_NAME=asteroid
 DB_USER=root
-DB_PASS=cosmic123
+DB_PASS=meteor123
 DB_CHARSET=utf8
 DB_COLLATION=collation
